--- a/admin/catalog_product.phtml
+++ b/admin/catalog_product.phtml
@@ -44,7 +44,7 @@
 										<div class="portlet light portlet-fit portlet-datatable">
 											<div class="portlet-title">
 												<div class="caption">
-													<i class="fa fa-shopping-cart"></i>Product Listing 
+													<i class="icon-cloud-upload"></i>Product Listing 
 												</div>
 												<div class="actions">
 													<a href="catalog_product_detail.phtml?pf_id=0" class="btn btn-circle btn-info">
