--- a/admin/catalog_system.phtml
+++ b/admin/catalog_system.phtml
@@ -439,9 +439,10 @@ jQuery("#btn-add-sub-category-confirm").click(function() {
 	}
 	else
 	{
-		window.location.href = "catalog_system_detail.phtml?system_id=0";
+		window.location.href = "catalog_system_detail.phtml?system_id=0&dept_id=" + theActivatedCategory;
 	}
 });
+
 });
 </script>
 <!-- END PAGE LEVEL SCRIPTS -->
