--- a/theme/journal4/include/head.phtml
+++ b/theme/journal4/include/head.phtml
@@ -16,6 +16,7 @@
 <link rel="stylesheet" href="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/lib/owl-carousel/owl.carousel.css"/>
 <link rel="stylesheet" href="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/lib/owl-carousel/owl.transitions.css"/>
 <link rel="stylesheet" href="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/lib/magnific-popup/magnific-popup.css"/>
+<link rel="stylesheet" href="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/lib/rs-plugin/css/settings.css"/>
 <link rel="stylesheet" href="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/css/hint.min.css"/>
 <link rel="stylesheet" href="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/css/journal.css"/>
 <link rel="stylesheet" href="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/css/features.css"/>
@@ -44,4 +45,13 @@
 <script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/lib/countdown/jquery.countdown.js"></script>
 <script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/lib/image-zoom/jquery.imagezoom.min.js"></script>
 <script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/lib/lazy/jquery.lazy.1.6.min.js"></script>
+<script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/lib/rs-plugin/js/jquery.themepunch.tools.min.js"></script>
+<script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/lib/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
+<script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/lib/quovolver/jquery.quovolver.js"></script>
+<script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/lib/isotope/jquery.isotope.min.js"></script>
+<script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/lib/isotope/jquery.isotope.sloppy-masonry.js"></script>
+<script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/lib/swipebox/source/jquery.swipebox.js"></script>
+<script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/lib/jqueryc/jqueryc.js"></script>
 <script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/journal.js"></script>
+
+
