--- a/theme/journal4/include/js.phtml
+++ b/theme/journal4/include/js.phtml
@@ -5,3 +5,35 @@
 <script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/lib/respond/respond.js?j2v=2.7.6"></script>
 <script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/lib/sticky/jquery.sticky.js?j2v=2.7.6"></script>
 <script type="text/javascript" src="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/init.js?j2v=2.7.6"></script>
+<% if g_route_page_id = "product" then %>
+
+<% end if %>
+<% if g_route_page_id = "sproduct" then %>
+
+<% end if %>
+<% if g_route_page_id = "cart" then %>
+
+<% end if %>
+<% if g_route_page_id = "login" then %>
+
+<% end if %>
+
+<% if g_route_page_id = "register" then %>
+
+<% end if %>
+<% if g_route_page_id = "billing_list" then %>
+<% if op = "edit" then %>
+
+<% end if %>
+<% end if %>
+<% if g_route_page_id = "shipping_list" then %>
+<% if op = "edit" then %>
+
+<% end if %>
+<% end if %>
+<% if g_route_page_id = "checkout" then %>
+
+<% end if %>
+<% if g_route_page_id = "config" then %>
+
+<% end if %>
