--- a/theme/journal4/index.phtml
+++ b/theme/journal4/index.phtml
@@ -14,6 +14,7 @@
 <header class="journal-header-center nolang-nocurr">
 <!--#INCLUDE FILE="include/header.phtml"-->
 </header>
+<!--#INCLUDE FILE="custom/index_top.phtml"-->
 <div class="extended-container">
 <!--#INCLUDE FILE="include/index.phtml"-->	
 </div>
