--- a/admin/tool_form_builder_detail.phtml
+++ b/admin/tool_form_builder_detail.phtml
@@ -1,11 +1,52 @@
+<%
+	Response.CodePage = 65001
+	Response.CharSet = "UTF-8"
+	
+	storeviewid = Trim(Request("storeviewid"))
+	if Len(storeviewid) > 0 then
+		Session("CURRENT_ADMIN_VIEW_ID")  = storeviewid
+	end if
+%>
 <!-- #INCLUDE File="local/local.phtml" -->
 <!-- #INCLUDE File="util/xt_func_util.phtml" -->
 <!-- #INCLUDE File="util/xt_func_string.phtml" -->
 <!-- #INCLUDE File="include/i_login.phtml" -->
+<%
+	form_id = Trim(Request("form_id"))
+	bShowInfo = false
+	if form_id = "0" then
+		form_id = GetUniqueLongIntegerID()
+		bShowInfo = true
+	end if
+	
+	sql = "SELECT * FROM " & g_storeid & "_form WHERE form_id='" & form_id & "'"
+	set rsForm= dbconn.Execute(sql)
+	
+	if not rsForm.EOF then
+		form_name = Trim(rsForm("form_name"))
+		form_title = Trim(rsForm("form_title"))
+		form_description = Trim(rsForm("form_description"))
+		form_msg1 = Trim(rsForm("form_msg1"))
+		form_use_email = rsForm("form_use_email")
+		form_email_address = Trim(rsForm("form_email_address"))
+	else
+		form_name = ""
+		form_title = ""
+		form_description = ""
+		form_msg1 = ""
+		form_use_email = "0"
+		form_email_address = ""
+	end if
+
+	rsForm.Close
+	
+%>
 <!--#INCLUDE FILE="include/doctype.phtml"-->
 <head>
 <!--#INCLUDE FILE="include/head.phtml"-->
 <!-- BEGIN PAGE LEVEL PLUGINS -->
+<link rel="stylesheet" href="assets/plugins/jquery-ui/jquery-ui-1.10.4.custom.min.css" />
+<link rel="stylesheet" href="assets/plugins/dynatree/src/skin-vista/ui.dynatree.css">
 <!-- END PAGE LEVEL PLUGINS -->
 <!--#INCLUDE FILE="include/head_bottom.phtml"-->
 </head>
@@ -25,24 +66,191 @@
 				<div class="page-content-wrapper">
 					<!-- BEGIN CONTENT BODY -->
 					<!-- BEGIN PAGE HEAD-->
-					<div class="page-head">
-						<div class="container-fluid">
-							<!-- BEGIN PAGE TITLE -->
-							<div class="page-title">
-								<h1>Dashboard
-									<small>dashboard & statistics</small>
-								</h1>
-							</div>
-							<!-- END PAGE TITLE -->
-						</div>
-					</div>
+					
 					<!-- END PAGE HEAD-->
 					<!-- BEGIN PAGE CONTENT BODY -->
 					<div class="page-content">
 						<div class="container-fluid">
 							<!-- BEGIN PAGE CONTENT INNER -->
 							<div class="page-content-inner">
-								
+								<div class="row">
+									<div class="col-md-12">
+										<form role="form" class="form-horizontal" id="form_edit_1">
+										<input type="hidden" name="form_id" id="form_id" value="<%=form_id%>" >
+										<div class="portlet">
+											<div class="portlet-title">
+												<div class="caption">
+												<i class="icon-note"></i>
+												<%
+												if bShowInfo then
+													Response.Write("New Form")
+												else
+													Response.Write(form_name)
+												end if
+												%>
+												</div>
+												
+												<div class="actions btn-set">
+													<button type="button" onclick="location.href='tool_form_builder.phtml';" name="back" class="btn btn-default">
+														<i class="fa fa-angle-left"></i> Back
+													</button>
+													<button class="btn btn-success" onclick="savebutton='1';">
+														<i class="fa fa-check"></i> Save
+													</button>
+													<!--
+													<button class="btn btn-success" onclick="savebutton='0';">
+														<i class="fa fa-check-circle"></i> Save & Continue Edit
+													</button>
+													-->
+													<div class="btn-group">
+														<a class="btn btn-success dropdown-toggle" href="javascript:;" data-toggle="dropdown">
+															<i class="fa fa-share"></i> More
+															<i class="fa fa-angle-down"></i>
+														</a>
+														<div class="dropdown-menu pull-right">
+															<li>
+																<a href="javascript:;" id="DeleteCategory"> Delete Current Field </a>
+															</li>
+															<li class="divider"> </li>
+															<li>
+																<a href="javascript:;" id="PreviewForm"> Preview </a>
+															</li>
+															<li class="divider"> </li>
+															<li>
+																<a href="javascript:;" id="DeleteForm"> Delete Form </a>
+															</li>
+															<li>
+																<a href="javascript:;" id="DuplicateEntry"> Duplicate Form</a>
+															</li>
+														</div>
+													</div>
+												</div>
+											</div>
+											<div class="alert alert-danger display-hide">
+											<button class="close" data-close="alert"></button> You have some form errors. Please check below. 
+											</div>
+											<div class="alert alert-success display-hide">
+											<button class="close" data-close="alert"></button> The information has been saved.
+											</div>
+											<div class="alert alert-warning display-hide">
+											<button class="close" data-close="alert"></button> The information has not been saved properly. Please contact system administrator.
+											</div>
+											<div class="portlet-body">
+												<div class="tabbable-bordered">
+													<ul class="nav nav-tabs">
+														<li <% if bShowInfo then %>class="active"<% end if %>>
+															<a href="#panel_formbuilder_example1" data-toggle="tab">
+																<i class="pink fa fa-info"></i> General Information
+															</a>
+														</li>
+														<li <% if not bShowInfo then %>class="active"<% end if %>>
+															<a href="#panel_formbuilder_example2" data-toggle="tab">
+																<i class="blue fa fa-code"></i> Form Fields
+															</a>
+														</li>
+													</ul>
+													<div class="tab-content">
+														<div class="tab-pane <% if bShowInfo then %>active<% end if %>" id="panel_formbuilder_example1">
+															<div class="row">
+																<div class="col-md-12">
+																	<div class="form-group">
+																		<label class="col-sm-2 control-label" for="form_name">
+																		Name <span class="symbol required">*</span>
+																		</label>
+																		<div class="col-sm-8">
+																		<input type="text" placeholder="" id="form_name" name="form_name" class="form-control input-sm" value="<%=form_name%>">
+																		</div>
+																	</div>
+																	<div class="form-group">
+																		<label class="col-sm-2 control-label" for="form_title">
+																		Title <span class="symbol required">*</span>
+																		</label>
+																		<div class="col-sm-8">
+																		<input type="text" placeholder="" id="form_title" name="form_title" class="form-control input-sm" value="<%=form_title%>">
+																		</div>
+																	</div>
+																	<div class="form-group">
+																		<label class="col-sm-2 control-label" for="form_description">
+																		Description 
+																		</label>
+																		<div class="col-sm-8">
+																		<input type="text" placeholder="" id="form_description" name="form_description" class="form-control input-sm" value="<%=form_description%>">
+																		</div>
+																	</div>
+																	<div class="form-group">
+																		<label class="col-sm-2 control-label" for="form_msg1">
+																		Submit Message 
+																		</label>
+																		<div class="col-sm-8">
+																		<textarea  id="form_msg1" name="form_msg1" rows="5" class="form-control input-sm"><%=form_msg1%></textarea>
+																		</div>
+																	</div>
+																	<div class="form-group">
+																		<label class="col-sm-2 control-label" for="form_use_email">
+																		Send Email 
+																		</label>
+																		<div class="col-sm-8">
+																		<select id="form_use_email" name="form_use_email" class="form-control input-sm">
+																			<option  value="0" <% if form_use_email = "0" then %>selected<%end if%>>No</option>
+																			<option  value="1" <% if form_use_email = "1" then %>selected<%end if%>>Yes</option>
+																		</select>
+																		</div>
+																	</div>
+																	<div class="form-group">
+																		<label class="col-sm-2 control-label" for="form_email_address">
+																		Email Address
+																		</label>
+																		<div class="col-sm-8">
+																		<input type="text" placeholder="" id="form_email_address" name="form_email_address" class="form-control input-sm" value="<%=form_email_address%>">
+																		</div>
+																	</div>
+																</div>
+															</div>
+														</div>
+														<div class="tab-pane <% if not bShowInfo then %>active<% end if %>" id="panel_formbuilder_example2">
+															<div class="row">
+																<div class="col-md-3">
+																	<div class="portlet blue-steel box">
+																		<div class="portlet-title">
+																			<div class="caption">
+																				<i class="fa fa-cogs"></i> Fields
+																			</div>
+																			<div class="actions">
+																				<a data-toggle="modal" class="btn yellow-crusta btn-sm" role="button" href="#myModal1">
+																					<i class="clip-plus-circle"></i> Add New Field
+																				</a>
+																			</div>
+																		</div>
+																		<div class="portlet-body">
+																			<div id="tree3"></div>
+																		</div>
+																	</div>
+																</div>
+																<div class="col-md-9">
+																	<div class="portlet blue-steel box">
+																		<div class="portlet-title">
+																			<div class="caption">
+																				<i class="fa fa-cogs"></i> Field Detail
+																			</div>
+																			<div class="actions">
+																			</div>
+																		</div>
+																		<div class="portlet-body">
+																			<span id="dept_detail">
+																			<p>Select existing field on the left or click on the "add" button to add new field.</p>
+																			</span>
+																		</div>
+																	</div>
+																</div>
+															</div>
+														</div>
+													</div>
+												</div>
+											</div>
+										</div>
+										</form>
+									</div>
+								</div>
 							</div>
 							<!-- END PAGE CONTENT INNER -->
 						</div>
@@ -61,12 +269,311 @@
 		</div>
 	</div>
 </div>
+
+<div class="modal fade" id="myModal1" tabindex="-1" role="dialog" aria-hidden="true">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" data-dismiss="modal" aria-hidden="true">
+					&times;
+				</button>
+				<h4 class="modal-title">Add New Field</h4>
+			</div>
+			<div class="modal-body">
+				<p>
+					<select id="new_form_item_type" name="new_form_item_type" class="form-control input-sm">
+						<option  value="1">Checkboxes</option> 
+						<option  value="2">Drop Down menu</option> 
+						<option  value="3">Radio Buttons</option>
+						<option  value="5">Standard Text Field</option>
+						<option  value="6">Text Area</option>
+						<option  value="7">Upload/Attachment</option>
+						<option  value="9">HTML Box</option>
+					</select>
+				</p>
+			</div>
+			<div class="modal-footer">
+				<button aria-hidden="true" data-dismiss="modal" class="btn btn-default">
+					Close
+				</button>
+				<button class="btn btn-primary" data-dismiss="modal" id="btn-add-root-category-confirm">
+					Confirm
+				</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<div id="loading-mask" style="display:none">
+<p class="loader" id="loading_mask_loader"><img src="assets/images/ajax-loader-primary.gif" alt="Loading..."/><br/>Please wait...</p>
+</div>
+<div id="dialog-confirm" title="Confirmation Required">
+Are you sure you want to do this?
+</div>
+
 <!--#INCLUDE FILE="include/js.phtml"-->
 <!-- BEGIN PAGE LEVEL PLUGINS -->
-
+<script src="assets/plugins/jquery-ui/jquery-ui-1.10.1.custom.min.js" type="text/javascript"></script>
+<script src="assets/plugins/dynatree/src/jquery.dynatree.js"></script>
+<script src="../assets/global/plugins/jquery-validation/js/jquery.validate.min.js" type="text/javascript"></script>
+<script src="../assets/global/plugins/jquery-validation/js/additional-methods.min.js" type="text/javascript"></script>
 <!-- END PAGE LEVEL PLUGINS -->
 <!-- BEGIN PAGE LEVEL SCRIPTS -->
+<script language="javascript">
+var savebutton = "1";
+</script>
+<script language="javascript">
+var theActivatedCategory = "0";
 
+var UITreeview = function () {
+	//function to initiate jquery.dynatree
+	var runTreeView = function () {
+		//External data 
+		$("#tree3").dynatree({
+			initAjax: {
+				url: "api/sp_form_builder_get_field_tree_list.phtml",
+				data: { mode: "funnyMode", form_id: "<%=form_id%>" }
+			},
+			
+			onActivate: function (node) {
+				theActivatedCategory = node.data.key;
+				$('#loading-mask').show();
+				jQuery.ajax({
+					type:"get",
+					url: "api/sp_tool_form_builder_get_field_detail_html.phtml",
+					data: {'form_item_id' : node.data.key, form_id: "<%=form_id%>", 'isAjax':true},
+					dataType: 'html',
+					success: function(data) {
+						jQuery("#dept_detail").html(data);
+					},
+					complete: function(){
+						$('#loading-mask').hide();
+						//$('#mainTitle1').html(node.data.title + "(ID:" + node.data.key + ")");
+						//$('#mainTitle2').html(node.data.title + "(ID:" + node.data.key + ")");
+						window.scrollTo(0,0);
+						
+					}
+				});
+			},
+			onDeactivate: function (node) {
+				//$("#echoActive").text("-");
+			},
+			
+			dnd: {
+				preventVoidMoves: true, // Prevent dropping nodes 'before self', etc.
+				onDragStart: function (node) {
+					/** This function MUST be defined to enable dragging for the tree.
+					 *  Return false to cancel dragging of node.
+					 */
+					return true;
+				},
+				onDragEnter: function (node, sourceNode) {
+					/** sourceNode may be null for non-dynatree droppables.
+					 *  Return false to disallow dropping on node. In this case
+					 *  onDragOver and onDragLeave are not called.
+					 *  Return 'over', 'before, or 'after' to force a hitMode.
+					 *  Return ['before', 'after'] to restrict available hitModes.
+					 *  Any other return value will calc the hitMode from the cursor position.
+					 */
+					// Prevent dropping a parent below another parent (only sort
+					// nodes under the same parent)
+					if (node.parent !== sourceNode.parent) {
+						//return false;
+					}
+					// Don't allow dropping *over* a node (would create a child)
+					return ["before", "after"];
+					//return true;
+				},
+				onDrop: function (node, sourceNode, hitMode, ui, draggable) {
+					/** This function MUST be defined to enable dropping of items on
+					 *  the tree.
+					 */
+					var souce_key = "";
+					var dest_key = "";
+
+					souce_key = sourceNode.data.key;
+					dest_key = node.data.key;
+
+					//alert(souce_key);
+					//alert(dest_key);
+					sourceNode.move(node, hitMode);
+
+					jQuery.ajax({
+						type: "get",
+						url: "api/sp_tool_form_builder_detail_update.phtml",
+						data: { 'form_id': '<%=form_id%>', 'mode': 'gsort', 'skey': souce_key, 'dkey': dest_key, isAjax: true },
+						dataType: 'json',
+						success: function (data) {
+							$("#tree3").dynatree("getTree").reload();
+						}
+					});
+				}
+			}
+		});
+		
+	};
+	return {
+		//main function to initiate template pages
+		init: function () {
+			runTreeView();
+		}
+	};
+}();
+
+</script>
+<script language="javascript">
+var savebutton = "1";
+var FormValidation = function () {
+	// basic validation
+	var handleValidation1 = function() {
+		var form1 = $('#form_edit_1');
+		var error1 = $('.alert-danger', form1);
+		var success1 = $('.alert-success', form1);
+		var warning1 = $('.alert-warning', form1);
+
+		form1.validate({
+			errorElement: 'span', //default input error message container
+			errorClass: 'help-block help-block-error', // default input error message class
+			focusInvalid: false, // do not focus the last invalid input
+			ignore: "",  // validate all fields including form hidden input
+			//RULES
+			rules: {
+				form_name: {
+					minlength: 2,
+					required: true
+				},
+				form_title: {
+					minlength: 2,
+					required: true
+				}
+			},
+			//END OF RULES
+			
+			invalidHandler: function (event, validator) { //display error alert on form submit              
+				success1.hide();
+				error1.show();
+				App.scrollTo(error1, -200);
+			},
+			
+			highlight: function (element) { // hightlight error inputs
+
+				$(element)
+					.closest('.form-group').addClass('has-error'); // set error class to the control group
+			},
+
+			unhighlight: function (element) { // revert the change done by hightlight
+				$(element)
+					.closest('.form-group').removeClass('has-error'); // set error class to the control group
+			},
+
+			success: function (label) {
+				label
+					.closest('.form-group').removeClass('has-error'); // set success class to the control group
+			},
+
+			submitHandler: function (form) {
+				
+				success1.hide();
+				error1.hide();
+				warning1.hide();
+				$.ajax({
+					type: "POST",
+					url: "api/sp_tool_form_builder_detail_update.phtml",
+					data: $("#form_edit_1").serialize(),
+					success: function() {
+						success1.show();
+						window.scrollTo(0,0);
+						$("#tree3").dynatree("getTree").reload();
+						//window.location.href = "catalog_category.phtml";
+					},
+					error: function() {
+						error1.show();
+						window.scrollTo(0,0);
+					}
+				});
+			}
+		});
+
+
+	}
+	return {
+		//main function to initiate the module
+		init: function () {
+			handleValidation1();
+		}
+	};
+
+}();
+</script>
+<script>
+jQuery(document).ready(function() {
+	UITreeview.init();
+	FormValidation.init();
+	
+	//Custom Scripts
+	$("#dialog-confirm").dialog({
+	  autoOpen: false,
+	  modal: true
+	});
+	
+	jQuery("#DeleteCategory").click(function(e) {
+		e.preventDefault();
+		jQuery("#dialog-confirm").html('Are you sure you want to delete "' + jQuery("#field_name").val() + '"? <br>This will delete current field permanently.');
+		jQuery("#dialog-confirm").dialog({
+		  autoOpen: false,
+		  modal: true,
+		  buttons : {
+			"Confirm" : function() {
+				window.location.href = "api/tp_tool_form_builder_field_delete.phtml?form_id=<%=form_id%>&form_item_id=" + jQuery("#form_item_id").val();
+			},
+			"Cancel" : function() {
+			  $(this).dialog("close");
+			}
+		  }
+		});
+		jQuery("#dialog-confirm").dialog("open");
+
+		
+	});
+	
+	jQuery("#DeleteForm").click(function(e) {
+		e.preventDefault();
+		jQuery("#dialog-confirm").html('Are you sure you want to delete "' + jQuery("#form_name").val() + '"? <br>This will delete current FORM permanently.');
+		jQuery("#dialog-confirm").dialog({
+		  autoOpen: false,
+		  modal: true,
+		  buttons : {
+			"Confirm" : function() {
+				window.location.href = "api/tp_tool_form_builder_delete.phtml?form_id=<%=form_id%>";
+			},
+			"Cancel" : function() {
+			  $(this).dialog("close");
+			}
+		  }
+		});
+		jQuery("#dialog-confirm").dialog("open");
+
+	});
+	
+	jQuery("#btn-add-root-category-confirm").click(function() {
+		$('#loading-mask').show();
+		
+		jQuery.ajax({
+			type:"get",
+			url: "api/sp_tool_form_builder_get_field_detail_html.phtml",
+			data: {'form_item_id' : '0', 'form_id' : '<%=form_id%>', item_type: $('#new_form_item_type').val(), 'isAjax':true},
+			dataType: 'html',
+			success: function(data) {
+				jQuery("#dept_detail").html(data);
+			},
+			complete: function(){
+				$('#loading-mask').hide();
+			}
+		});
+		
+	});
+});
 <!-- END PAGE LEVEL SCRIPTS -->
+</script>
 </body>
 </html>
