--- a/theme/marketshop1/include/head.phtml
+++ b/theme/marketshop1/include/head.phtml
@@ -13,6 +13,9 @@
 <% if g_route_page_id = "product" then %>
 <link rel="stylesheet" type="text/css" href="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/swipebox/src/css/swipebox.min.css">
 <% end if %>
+<% if g_route_page_id = "config" then %>
+<link rel="stylesheet" type="text/css" href="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/js/swipebox/src/css/swipebox.min.css">
+<% end if %>
 <link rel="stylesheet" type="text/css" href="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/css/responsive.css" />
 <link rel="stylesheet" type="text/css" href="<%=skin_base_url%>theme/<%=THEME_TEMPLATE%>/css/custom.css" />
 <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans' type='text/css'>
